--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -12,7 +12,7 @@
     />
     <meta name="description" content="" />
     <link rel="stylesheet" href="./assets/style.css" />
-    <script src="works.js" defer></script>
+    <script src="./assets/works.js" defer></script>
   </head>
   <body>
     <header>
