--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -52,7 +52,12 @@
       </section>
       <section id="portfolio">
         <h2>Mes Projets</h2>
-        <div class="gallery"></div>
+        <div class="gallery">
+          <!--<figure>
+                  <img src="assets/images/abajour-tahina.png" alt="Abajour Tahina">
+                  <figcaption>Abajour Tahina</figcaption>
+                </figure> -->
+        </div>
       </section>
       <section id="contact">
         <h2>Contact</h2>
