premier essai category

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -13,6 +13,7 @@
     <meta name="description" content="" />
     <link rel="stylesheet" href="./assets/style.css" />
     <script src="./assets/works.js" defer></script>
+    <script src="./assets/categories.js" defer></script>
   </head>
   <body>
     <header>
@@ -53,6 +54,12 @@
       <section id="portfolio">
         <h2>Mes Projets</h2>
         <div class="gallery">
+          <button class="categorieObjet">Objets</button>
+          <button class="categorieAppartements">Appartements</button>
+          <button class="catergorieHotelsAndRestaurants">
+            Hotels & Restaurants
+          </button>
+
           <!--<figure>
                   <img src="assets/images/abajour-tahina.png" alt="Abajour Tahina">
                   <figcaption>Abajour Tahina</figcaption>
