html "tout"commentaire

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -54,7 +54,7 @@
       <section id="portfolio">
         <h2>Mes Projets</h2>
         <div class="gallery">
-          <button class="categorieNone">Tout</button>
+          <!--<button class="categorieNone">Tout</button>-->
           <button class="categorieObjets">Objets</button>
           <button class="categorieAppartements">Appartements</button>
           <button class="catergorieHotelsAndRestaurants">
