--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -53,14 +53,16 @@
       </section>
       <section id="portfolio">
         <h2>Mes Projets</h2>
-        <div class="gallery">
-          <!--<button class="categorieNone">Tout</button>-->
+        <div class="boutton_categorie">
+          <button class="categorieNone">Tous</button>
           <button class="categorieObjets">Objets</button>
           <button class="categorieAppartements">Appartements</button>
           <button class="catergorieHotelsAndRestaurants">
             Hotels & Restaurants
           </button>
+        </div>
 
+        <div class="gallery">
           <!--<figure>
                   <img src="assets/images/abajour-tahina.png" alt="Abajour Tahina">
                   <figcaption>Abajour Tahina</figcaption>
