--- a/FrontEnd/assets/login.html
+++ b/FrontEnd/assets/login.html
@@ -12,6 +12,7 @@
     />
     <meta name="description" content="" />
     <link rel="stylesheet" href="./style2.css" />
+    <script src="./login.js" defer></script>
   </head>
 
   <body>
