--- a/FrontEnd/assets/login.html
+++ b/FrontEnd/assets/login.html
@@ -29,12 +29,12 @@
     </header>
     <section id="contact">
       <h2>Log In</h2>
-      <form action="" method="post">
+      <form action="" method="post" id="login-form">
         <label for="email">E-mail</label>
         <input type="email" id="email" name="email" required />
         <label for="password">Mot de passe</label>
         <input type="password" id="password" name="password" required />
-        <input type="submit" value="Se connecter" />
+        <input class="button" type="submit" value="Se connecter" />
         <p>Mot de passe oublié</p>
       </form>
     </section>
