recherche d'un filtre qui fonctionne

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -53,14 +53,7 @@
       </section>
       <section id="portfolio">
         <h2>Mes Projets</h2>
-        <div class="boutton_categorie">
-          <button class="categorieNone">Tous</button>
-          <button class="categorieObjets">Objets</button>
-          <button class="categorieAppartements">Appartements</button>
-          <button class="catergorieHotelsAndRestaurants">
-            Hotels & Restaurants
-          </button>
-        </div>
+        <div class="boutton_categories"></div>
 
         <div class="gallery">
           <!--<figure>
