--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -53,7 +53,9 @@
       </section>
       <section id="portfolio">
         <h2>Mes Projets</h2>
-        <div class="boutton_categories"></div>
+        <div class="filtres">
+          <button class="is-active btn_filter">Tous</button>
+        </div>
 
         <div class="gallery">
           <!--<figure>
