--- a/FrontEnd/assets/login.html
+++ b/FrontEnd/assets/login.html
@@ -29,12 +29,18 @@
     </header>
     <section id="contact">
       <h2>Log In</h2>
-      <form action="" method="post" id="login-form">
-        <label for="email">E-mail</label>
-        <input type="email" id="email" name="email" required />
-        <label for="password">Mot de passe</label>
-        <input type="password" id="password" name="password" required />
-        <input class="button" type="submit" value="Se connecter" />
+      <form action="" method="post" id="login-form" class="form">
+        <div class="formControl">
+          <label for="email">E-mail</label>
+          <input type="email" id="email" name="email" required />
+          <small>Message d'erreur</small>
+        </div>
+        <div class="formControl">
+          <label for="password">Mot de passe</label>
+          <input type="password" id="password" name="password" required />
+          <small>Message d'erreur</small>
+        </div>
+        <button type="submit">Se connecter</button>
         <p>Mot de passe oublié</p>
       </form>
     </section>
