modif small login et fetch login et ajout html->js

--- a/FrontEnd/assets/login.html
+++ b/FrontEnd/assets/login.html
@@ -33,12 +33,11 @@
         <div class="formControl">
           <label for="email">E-mail</label>
           <input type="email" id="email" name="email" required />
-          <small>Message d'erreur</small>
         </div>
         <div class="formControl">
           <label for="password">Mot de passe</label>
           <input type="password" id="password" name="password" required />
-          <small>Message d'erreur</small>
+          <small></small>
         </div>
         <button type="submit">Se connecter</button>
         <p>Mot de passe oublié</p>
