--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -10,12 +10,30 @@
       href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <meta name="description" content="" />
     <link rel="stylesheet" href="./assets/style.css" />
     <script src="./assets/works.js" defer></script>
     <script src="./assets/categories.js" defer></script>
   </head>
   <body>
+    <!--<div class="edit"> (faire en js)
+      <div class="boutton">
+        <button type="submit" class="boutton-noir" href="">
+          <i class="fa-regular fa-pen-to-square"></i>Mode édition
+        </button>
+        <button type="submit" class="boutton-blanc">
+          publier les changements
+        </button>
+      </div>
+    </div>-->
+    <!--<div class="main-container">-->
     <header>
       <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
       <nav>
@@ -52,7 +70,18 @@
         </article>
       </section>
       <section id="portfolio">
+        <!--<div class="modification"> (faire dynamiquement en js) -->
         <h2>Mes Projets</h2>
+        <!--<a href="#modal1"   (faire dynamiquement en js)
+              ><i class="fa-regular fa-pen-to-square"></i>modifier
+            </a>
+          </div>
+		  <aside id="modal1" class="modal1" aria-hidden="true" role="dialog">
+			<div class="modal-wrapper">
+
+			</div>
+
+		  </aside>-->
         <div class="filtres">
           <button class="is-active btn_filter">Tous</button>
         </div>
@@ -86,5 +115,6 @@
         </ul>
       </nav>
     </footer>
+    <!--</div>-->
   </body>
 </html>
