--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -11,8 +11,8 @@
       rel="stylesheet"
     />
     <meta name="description" content="" />
-    <link rel="stylesheet" href="./style2.css" />
-    <script src="./login.js" defer></script>
+    <link rel="stylesheet" href="./assets/style2.css" />
+    <script src="./assets/login.js" defer></script>
   </head>
 
   <body>
@@ -20,10 +20,10 @@
       <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
       <nav>
         <ul>
-          <li>projets</li>
+          <li><a href="index.html">projets</a></li>
           <li>contact</li>
           <li>login</li>
-          <li><img src="./icons/instagram.png" alt="Instagram" /></li>
+          <li><img src="./assets/icons/instagram.png" alt="Instagram" /></li>
         </ul>
       </nav>
     </header>
@@ -32,14 +32,17 @@
       <form action="" method="post" id="login-form" class="form">
         <div class="formControl">
           <label for="email">E-mail</label>
-          <input type="email" id="email" name="email" required />
+          <input type="email" id="email" name="email" />
+          <small></small>
         </div>
         <div class="formControl">
           <label for="password">Mot de passe</label>
-          <input type="password" id="password" name="password" required />
+          <input type="password" id="password" name="password" />
           <small></small>
         </div>
+        <p class="error-message"></p>
         <button type="submit">Se connecter</button>
+
         <p>Mot de passe oublié</p>
       </form>
     </section>
