mise en place des classes  pour la connexion modal

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -21,18 +21,19 @@
     <link rel="stylesheet" href="./assets/style.css" />
     <script src="./assets/works.js" defer></script>
     <script src="./assets/categories.js" defer></script>
+    <script src="./assets/modal.js" defer></script>
   </head>
   <body>
-    <!--<div class="edit"> (faire en js)
-      <div class="boutton">
+    <div class="edit">
+      <!--<div class="boutton">
         <button type="submit" class="boutton-noir" href="">
           <i class="fa-regular fa-pen-to-square"></i>Mode édition
         </button>
         <button type="submit" class="boutton-blanc">
           publier les changements
         </button>
-      </div>
-    </div>-->
+      </div>-->
+    </div>
     <!--<div class="main-container">-->
     <header>
       <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
@@ -40,7 +41,7 @@
         <ul>
           <li>projets</li>
           <li>contact</li>
-          <li><a href="login.html">login</a></li>
+          <li class="connect"><a href="login.html"></a>login</li>
           <li><img src="./assets/icons/instagram.png" alt="Instagram" /></li>
         </ul>
       </nav>
