--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -22,7 +22,7 @@
         <ul>
           <li><a href="index.html">projets</a></li>
           <li>contact</li>
-          <li>login</li>
+          <li class="connect-login">login</li>
           <li><img src="./assets/icons/instagram.png" alt="Instagram" /></li>
         </ul>
       </nav>
