boutton edit mise en place  ( body à ajuster)

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -24,17 +24,7 @@
     <script src="./assets/modal.js" defer></script>
   </head>
   <body>
-    <div class="edit">
-      <!--<div class="boutton">
-        <button type="submit" class="boutton-noir" href="">
-          <i class="fa-regular fa-pen-to-square"></i>Mode édition
-        </button>
-        <button type="submit" class="boutton-blanc">
-          publier les changements
-        </button>
-      </div>-->
-    </div>
-    <!--<div class="main-container">-->
+    <div class="edit"></div>
     <header>
       <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
       <nav>
@@ -72,8 +62,8 @@
       </section>
       <section id="portfolio">
         <!--<div class="modification"> (faire dynamiquement en js) -->
-        <h2>Mes Projets</h2>
-        <!--<a href="#modal1"   (faire dynamiquement en js)
+        <h2 class="portfolioTitle">Mes Projets</h2>
+        <!--<a href="#modal1"   
               ><i class="fa-regular fa-pen-to-square"></i>modifier
             </a>
           </div>
@@ -116,6 +106,5 @@
         </ul>
       </nav>
     </footer>
-    <!--</div>-->
   </body>
 </html>
