works categorie et modal dans le même fichier

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -19,9 +19,7 @@
     />
     <meta name="description" content="" />
     <link rel="stylesheet" href="./assets/style.css" />
-    <script src="./assets/works.js" defer></script>
-    <script src="./assets/categories.js" defer></script>
-    <script src="./assets/modal.js" defer></script>
+    <script src="./assets/index.js" defer></script>
   </head>
   <body>
     <div class="edit"></div>
@@ -61,18 +59,12 @@
         </article>
       </section>
       <section id="portfolio">
-        <!--<div class="modification"> (faire dynamiquement en js) -->
         <h2 class="portfolioTitle">Mes Projets</h2>
-        <!--<a href="#modal1"   
-              ><i class="fa-regular fa-pen-to-square"></i>modifier
-            </a>
-          </div>
-		  <aside id="modal1" class="modal1" aria-hidden="true" role="dialog">
-			<div class="modal-wrapper">
-
-			</div>
-
-		  </aside>-->
+        <aside id="modal1" class="modal" aria-hidden="true" role="dialog">
+          <div class="modal-wrapper">
+			<h1</h1>
+		  </div>
+        </aside>
         <div class="filtres">
           <button class="is-active btn_filter">Tous</button>
         </div>
