première étape du modal

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -62,8 +62,16 @@
         <h2 class="portfolioTitle">Mes Projets</h2>
         <aside id="modal1" class="modal" aria-hidden="true" role="dialog">
           <div class="modal-wrapper">
-			<h1</h1>
-		  </div>
+            <h1>Texte littéraire</h1>
+            Un texte répond de façon plus ou moins pertinente à des critères qui
+            en déterminent la qualité littéraire. On retient en particulier la
+            structure d'ensemble, la syntaxe et la ponctuation, l'orthographe
+            lexicale et grammaticale, la pertinence et la richesse du
+            vocabulaire, la présence de figures de style, le registre de langue
+            et la fonction recherchée (narrative, descriptive, expressive,
+            argumentative, injonctive, poétique). C'est l'objet de l'analyse
+            littéraire.
+          </div>
         </aside>
         <div class="filtres">
           <button class="is-active btn_filter">Tous</button>
