1 ère partie modal

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -60,17 +60,33 @@
       </section>
       <section id="portfolio">
         <h2 class="portfolioTitle">Mes Projets</h2>
-        <aside id="modal1" class="modal" aria-hidden="true" role="dialog">
-          <div class="modal-wrapper">
-            <h1>Texte littéraire</h1>
-            Un texte répond de façon plus ou moins pertinente à des critères qui
-            en déterminent la qualité littéraire. On retient en particulier la
-            structure d'ensemble, la syntaxe et la ponctuation, l'orthographe
-            lexicale et grammaticale, la pertinence et la richesse du
-            vocabulaire, la présence de figures de style, le registre de langue
-            et la fonction recherchée (narrative, descriptive, expressive,
-            argumentative, injonctive, poétique). C'est l'objet de l'analyse
-            littéraire.
+        <aside
+          id="modal1"
+          class="modal"
+          aria-hidden="true"
+          role="dialog"
+          aria-labelledby="title-modal"
+          style="display: none"
+        >
+          <div class="modal-wrapper js-modal-stop">
+            <button class="js-modal-close">
+              <i class="fa-solid fa-xmark"></i>
+            </button>
+            <h1 class="title-modal">Texte littéraire</h1>
+            <p>
+              Un texte répond de façon plus ou moins pertinente à des critères
+              qui en déterminent la qualité littéraire. On retient en
+              particulier la structure d'ensemble, la syntaxe et la ponctuation.
+            </p>
+            <input type="text" />
+            <p>
+              L'orthographe lexicale et grammaticale, la pertinence et la
+              richesse du vocabulaire, la présence de figures de style, le
+              registre de langue et la fonction recherchée (narrative,
+              descriptive, expressive, argumentative, injonctive, poétique).
+              C'est l'objet de l'analyse littéraire.
+            </p>
+            <a href="#">hello</a>
           </div>
         </aside>
         <div class="filtres">
