--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <meta name="description" content="" />
-    <link rel="stylesheet" href="./assets/style2.css" />
+    <link rel="stylesheet" href="./assets/login.css" />
     <script src="./assets/login.js" defer></script>
   </head>
 
