--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -66,27 +66,18 @@
           aria-hidden="true"
           role="dialog"
           aria-labelledby="title-modal"
-          style="display: none"
         >
           <div class="modal-wrapper js-modal-stop">
             <button class="js-modal-close">
-              <i class="fa-solid fa-xmark"></i>
+              <i class="fa-solid fa-x"></i>
             </button>
-            <h1 class="title-modal">Texte littéraire</h1>
-            <p>
-              Un texte répond de façon plus ou moins pertinente à des critères
-              qui en déterminent la qualité littéraire. On retient en
-              particulier la structure d'ensemble, la syntaxe et la ponctuation.
-            </p>
-            <input type="text" />
-            <p>
-              L'orthographe lexicale et grammaticale, la pertinence et la
-              richesse du vocabulaire, la présence de figures de style, le
-              registre de langue et la fonction recherchée (narrative,
-              descriptive, expressive, argumentative, injonctive, poétique).
-              C'est l'objet de l'analyse littéraire.
-            </p>
-            <a href="#">hello</a>
+            <div class="modalMain">
+              <h1 class="title-modal">Galerie photo</h1>
+              <div class="miniGallery"></div>
+              <hr class="hr" />
+              <button class="buttonModal">Ajouter une photo</button>
+              <p class="text-modal">Supprimer la gallerie</p>
+            </div>
           </div>
         </aside>
         <div class="filtres">
