--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -66,6 +66,7 @@
           aria-hidden="true"
           role="dialog"
           aria-labelledby="title-modal"
+          style="display: none"
         >
           <div class="modal-wrapper js-modal-stop">
             <button class="js-modal-close">
