design fenêtre modal terminer

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -36,7 +36,7 @@
     </header>
     <main>
       <section id="introduction">
-        <figure>
+        <figure class="figure-image">
           <img src="./assets/images/sophie-bluel.png" alt="" />
         </figure>
         <article>
