--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -75,7 +75,7 @@
 
             <div class="modalMain">
               <!--partie gallerie modal-->
-              <div class="galleryModal" style="display: none">
+              <div class="galleryModal" style="display: flex">
                 <h2 class="title-modal">Galerie photo</h2>
                 <div class="miniGallery"></div>
                 <hr class="hr" />
@@ -84,7 +84,7 @@
               </div>
               <!--jusqu'ici-->
               <!--partie ajout photo-->
-              <div class="photoModal" style="display: flex">
+              <div class="photoModal" style="display: none">
                 <h2 class="titleAjoutPhoto">Ajout photo</h2>
                 <form
                   action="upload.php"
@@ -93,12 +93,14 @@
                   class="formPhoto"
                 >
                   <div class="boxPhoto">
+                    <i class="fa-regular fa-image icon-photo"></i>
                     <input
                       type="file"
                       id="file"
                       class="input-file"
                       accept="image/png, image/jpg"
                     />
+                    <p class="type-photo">jpg, png : 4mo max</p>
                   </div>
                   <label for="title" class="title-label">Titre</label>
                   <input
@@ -117,7 +119,7 @@
                     </option>
                   </select>
                   <hr class="hrPhoto" />
-                  <input type="submit" value="Envoyer" class="buttonPhoto" />
+                  <input type="submit" value="Valider" id="buttonPhoto" />
                 </form>
               </div>
               <!--jusqu'ici-->
