--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -69,6 +69,9 @@
           style="display: none"
         >
           <div class="modal-wrapper js-modal-stop">
+            <button class="arrowLeft">
+              <i class="fa-solid fa-arrow-left"></i>
+            </button>
             <button class="js-modal-close">
               <i class="fa-solid fa-x"></i>
             </button>
