--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -93,6 +93,7 @@
                   action="upload.php"
                   method="post"
                   enctype="multipart/form-data"
+                  id="form"
                   class="formPhoto"
                 >
                   <div class="boxPhoto">
@@ -111,19 +112,21 @@
                     name="title"
                     id="title"
                     class="input-title"
-                    placeholder=""
                   />
                   <label for="category" class="title-label">Catégorie</label>
                   <select name="category" id="category" class="input-title">
-                    <option value="Objets">Objets</option>
-                    <option value="Appartements">Appartements</option>
-                    <option value="Hotels & restaurants">
-                      Hotels & restaurants
-                    </option>
+                    <option value="1">Objets</option>
+                    <option value="2">Appartements</option>
+                    <option value="3">Hotels & restaurants</option>
                   </select>
                   <hr class="hrPhoto" />
-                  <input type="submit" value="Valider" id="buttonPhoto" />
+                  <input
+                    type="submit"
+                    value="Valider"
+                    id="buttonPhoto"
+                  /><!--mettre disabled-->
                 </form>
+                <div id="message"></div>
               </div>
               <!--jusqu'ici-->
             </div>
