method:post en cours

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -114,11 +114,11 @@
                     class="input-title"
                   />
                   <label for="category" class="title-label">Catégorie</label>
-                  <select name="category" id="category" class="input-title">
-                    <option value="1">Objets</option>
-                    <option value="2">Appartements</option>
-                    <option value="3">Hotels & restaurants</option>
-                  </select>
+                  <select
+                    name="category"
+                    id="category"
+                    class="input-title"
+                  ></select>
                   <hr class="hrPhoto" />
                   <input
                     type="submit"
