value et icon fait

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -97,7 +97,10 @@
                   class="formPhoto"
                 >
                   <div class="boxPhoto">
-                    <i class="fa-regular fa-image icon-photo"></i>
+                    <img
+                      src="./assets/icons/picture-svgrepo-com 1.svg"
+                      alt="icon figma image"
+                    />
                     <input
                       type="file"
                       id="file"
