option par défaut et reset fait

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -115,13 +115,14 @@
                     name="title"
                     id="title"
                     class="input-title"
+                    value=" "
                   />
                   <label for="category" class="title-label">Catégorie</label>
-                  <select
-                    name="category"
-                    id="category"
-                    class="input-title"
-                  ></select>
+                  <select name="category" id="category" class="input-title">
+                    <option value="0">
+                      Veuillez sélectionner une catégorie
+                    </option>
+                  </select>
                   <hr class="hrPhoto" />
                   <input
                     type="submit"
