function disabled faite mais non fonctionnelle

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -115,20 +115,16 @@
                     name="title"
                     id="title"
                     class="input-title"
-                    value=" "
+                    value=""
                   />
                   <label for="category" class="title-label">Catégorie</label>
                   <select name="category" id="category" class="input-title">
-                    <option value="0">
+                    <option value="">
                       Veuillez sélectionner une catégorie
                     </option>
                   </select>
                   <hr class="hrPhoto" />
-                  <input
-                    type="submit"
-                    value="Valider"
-                    id="buttonPhoto"
-                  /><!--mettre disabled-->
+                  <input type="submit" value="Valider" id="buttonPhoto" />
                 </form>
                 <div id="message"></div>
               </div>
