--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -101,6 +101,9 @@
                       src="./assets/icons/picture-svgrepo-com 1.svg"
                       alt="icon figma image"
                     />
+                    <label for="file" class="file-label"
+                      >+ Ajouter une photo</label
+                    >
                     <input
                       type="file"
                       id="file"
