modif buttondisabled et ajoutphoto

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -129,7 +129,7 @@
                     </option>
                   </select>
                   <hr class="hrPhoto" />
-                  <input type="submit" value="Valider" id="buttonPhoto" />
+                  <button type="submit" id="buttonPhoto">Valider</button>
                 </form>
                 <div id="message"></div>
               </div>
