cross box photo

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -97,6 +97,9 @@
                   class="formPhoto"
                 >
                   <div class="boxPhoto">
+                    <div class="icon-cross">
+                      <i class="fa-solid fa-x"></i>
+                    </div>
                     <img
                       src="./assets/icons/picture-svgrepo-com 1.svg"
                       alt="icon figma image"
