suite code ajout photo

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -127,7 +127,7 @@
                   />
                   <label for="category" class="title-label">Catégorie</label>
                   <select name="category" id="category" class="input-title">
-                    <option value="">
+                    <option value="0">
                       Veuillez sélectionner une catégorie
                     </option>
                   </select>
