--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -111,7 +111,6 @@
                     <input
                       type="file"
                       id="file"
-                      onchange="inputFiles()"
                       class="input-file"
                       accept="image/png, image/jpg"
                     />
@@ -127,7 +126,7 @@
                   />
                   <label for="category" class="title-label">Catégorie</label>
                   <select name="category" id="category" class="input-title">
-                    <option value="0">
+                    <option value="">
                       Veuillez sélectionner une catégorie
                     </option>
                   </select>
